--- a/exemplo01.html
+++ b/exemplo01.html
@@ -22,5 +22,7 @@
             </div>
         </form>
         <script src="exemplos.js"></script>
+        <script>somarAlert();</script>
+        
     </body>
 </html>
